--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+spring.ai.openai.apikey=
 quarkus.http.read-timeout=120s
 quarkus.langchain4j.openai.timeout=1m
+quarkus.langchain4j.openai.api-key=
+langchain4j.open-ai.chat-model.api-key=
 langchain4j.open-ai.chat-model.model-name=gpt-3.5-turbo
 langchain4j.open-ai.chat-model.temperature=0.0
 langchain4j.open-ai.chat-model.timeout=PT60S
